--- a/1_youtube.css
+++ b/1_youtube.css
@@ -266,6 +266,23 @@ body{
     position:relative;
 }
 
+@media (max-width:869px){
+    .container-grid{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width:1124) and(min-width:870px){
+    .container-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width:1125px){
+    .container-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
 
 .thumbnail-4{
     width:100%;
