--- a/1_youtube.css
+++ b/1_youtube.css
@@ -343,3 +343,17 @@ body{
     color: rgb(96, 96, 96);
     font-size: 12px;
 }
+
+
+
+
+.owner-name{
+    position:fixed;
+    padding:6px 10px;
+    bottom:20px;
+    right:20px;
+    background-color: rgb(100, 100, 100);
+    border-radius:3px;
+    color:white;
+    opacity:60%;
+}
