--- a/2_google.css
+++ b/2_google.css
@@ -163,16 +163,18 @@ p{
 
 .section-3{
     flex:3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .search-box{
-    display:flex;
-    flex-direction: row;
+    display: flex;
     justify-content: center;
     align-items: center;
     width:fit-content;
     height:fit-content;
-    background-color: light-blue;
     border-radius: 26px;
     box-shadow: 1px 1px 8px rgba(0,0,0,0.2);
 }
