--- a/2_google.css
+++ b/2_google.css
@@ -257,3 +257,25 @@ p{
     font-size: 13px;
     margin-left: 10px;
 }
+
+
+
+
+
+
+
+
+.owner-name{
+    position:fixed;
+    padding:6px 10px;
+    bottom:58px;
+    right:20px;
+    background-color: rgb(100, 100, 100);
+    border-radius:3px;
+    color:white;
+    opacity:60%;
+}
+
+.owner-name:hover{
+    cursor:default;
+}
